# tiny-sip

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
examples/: mizu_example.py
tests/: test_basic.py
tinysip/: __init__.py  auth.py  call_flow.py  client.py  dns.py  fsm.py  ladder.py  logging_utils.py  message.py  sdp.py  transport.py
tinysip/media/: audio.py  codecs.py  dtmf.py  rtp.py
